design: fix vertical alignment

--- a/project-base/src/SS6/ShopBundle/Resources/styles/admin/components/form/line.less
+++ b/project-base/src/SS6/ShopBundle/Resources/styles/admin/components/form/line.less
@@ -96,6 +96,7 @@ Form field constructions, with many variants and uses
 		display: inline-block;
 		padding-right: 10px;
 		position: relative;
+		vertical-align: middle;
 
 		&--text {
 			padding-top: 6px;
